testsuite/tests/partial-sigs/should_fail/PartialTypeSignaturesDisabled.stderr

PartialTypeSignaturesDisabled.hs:4:8: error:
    Found type wildcard ‘_’ standing for ‘Bool’
    To use the inferred type, enable PartialTypeSignatures
    Relevant bindings include
      foo :: Bool -> Bool (bound at PartialTypeSignaturesDisabled.hs:5:1)
    In the type signature:
      foo :: _ -> _

PartialTypeSignaturesDisabled.hs:4:13: error:
    Found type wildcard ‘_’ standing for ‘Bool’
    To use the inferred type, enable PartialTypeSignatures
    Relevant bindings include
      foo :: Bool -> Bool (bound at PartialTypeSignaturesDisabled.hs:5:1)
    In the type signature:
      foo :: _ -> _
